--- a/src/ccs/global.css
+++ b/src/ccs/global.css
@@ -8,7 +8,7 @@
 }
 body {
   font-family: "IBM Plex Sans", sans-serif;
-  background-color: #fefde9;
+  background-color: #fef9e9;
 }
 h1 {
   font-family: "Oregon LDO DemiBold", sans-serif;
