--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -22,13 +22,11 @@ const faqs = [
   },
   {
     question: "Må jeg tage en ven med til event selvom han ikke er medlem?",
-    answer:
-      "Ja, man er altid velkommen til at medbringe en ven eller familiemedlem til vores events.",
+    answer: "Ja, man er altid velkommen til at medbringe en ven eller familiemedlem til vores events.",
   },
   {
     question: "Skal jeg tilmelde mig events på forhånd?",
-    answer:
-      "Det er ikke et krav, men vi sætter stor pris på, at du tilmelder dig – så har vi en idé om, hvor mange der kommer, og kan planlægge lidt bedre.",
+    answer: "Det er ikke et krav, men vi sætter stor pris på, at du tilmelder dig – så har vi en idé om, hvor mange der kommer, og kan planlægge lidt bedre.",
   },
 
   {
@@ -38,8 +36,7 @@ const faqs = [
   },
   {
     question: "Skal jeg have erfaring for at blive ambassadør?",
-    answer:
-      "Nej, så længe du har et drive og er klar på at gå all ind i vores fælleskab, så behøver du ingen tidligere erfaring.",
+    answer: "Nej, så længe du har et drive og er klar på at gå all ind i vores fælleskab, så behøver du ingen tidligere erfaring.",
   },
 ];
 ---
@@ -60,9 +57,11 @@ const faqs = [
 
   .faq-item {
     background-color: #f2f1ed;
+    max-width: 80%;
+    margin: 0 auto 0 auto; /* centers each box */
 
     margin-bottom: 0.8rem;
-    padding: 0.3rem 1rem;
+    padding: 0.3rem;
     border-radius: 0.4rem;
     cursor: pointer;
     position: relative;
@@ -78,7 +77,8 @@ const faqs = [
     justify-content: space-between;
     align-items: center;
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    margin-left: 1rem;
   }
 
   .faq-answer {
@@ -108,7 +108,7 @@ const faqs = [
       padding: 4rem;
     }
     .faq-question {
-      font-size: 1.4rem;
+      font-size: 1rem;
     }
     .faq-item {
       margin-bottom: 1.1rem;
