--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -44,7 +44,9 @@ const events = await res.json();
                   <div class="event-location">{ev.index_by}</div>
                   <div class="details">{ev.begivenhed_info}</div>
                 </div>
-                <button class="signup-button">Tilmeld dig</button>
+                <a class="signup-button" href="/begivenheder">
+                  Tilmeld dig
+                </a>
               </div>
             </div>
           </div>
