alle billeder og video har lazy loading

--- a/src/components/Ambas_popup.astro
+++ b/src/components/Ambas_popup.astro
@@ -3,9 +3,9 @@
   <div class="pop-up__box">
     <button class="close">&times;</button>
     <div class="images">
-      <img  src="/public/billeder/influencer.png" alt="Preview 1" />
-      <img class="hide" src="/public/billeder/pizza.png" alt="Preview 2" />
-      <img class="hide" src="/public/billeder/clothingrack.png" alt="Preview 3" />
+      <img  src="/public/billeder/influencer.png" alt="Preview 1" loading="lazy"/>
+      <img class="hide" src="/public/billeder/pizza.png" alt="Preview 2" loading="lazy"/>
+      <img class="hide" src="/public/billeder/clothingrack.png" alt="Preview 3" loading="lazy" />
     </div>
     <h2>Indsend ansøgning om at blive ambassadør</h2>
     <form class="form">
