--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,13 +24,13 @@
     <!-- Sociale medier direkte under -->
     <div class="footer-icons">
       <a href="https://www.instagram.com/anothercloset.dk/">
-        <img src="/billeder/insta.png" alt="Instagram" />
+        <img src="/billeder/insta.png" alt="Instagram" loading="lazy" />
       </a>
       <a href="https://www.facebook.com/anotherclosetdanmark/">
-        <img src="/billeder/facebook.png" alt="Facebook" />
+        <img src="/billeder/facebook.png" alt="Facebook"  loading="lazy"/>
       </a>
       <a href="https://www.tiktok.com/@anothercloset.dk">
-        <img src="/billeder/tiktok.png" alt="TikTok" />
+        <img src="/billeder/tiktok.png" alt="TikTok" loading="lazy" /> 
       </a>
     </div>
   </div>
