--- a/src/components/Guide.astro
+++ b/src/components/Guide.astro
@@ -7,7 +7,7 @@
         <h3>1. Find dit tøjfællesskab</h3>
         <p>Vi tilbydder fællesskaber over hele landet, og du kan altid skifte, hvis du ønsker det.</p>
       </div>
-      <img src="/billeder/1guide.webp" alt="" />
+      <img src="/billeder/1guide.webp" alt="" loading="lazy" />
       <div class="dots">
         <a href="#slide1" class="dot active"></a>
         <a href="#slide2" class="dot"></a>
@@ -23,7 +23,7 @@
         <h3>2. Mød op til en byttesalon</h3>
         <p>Én gang om måneden holder vi bytte-saloner i dit nærområde. Mød op og få byttet dig til nye fede styles.</p>
       </div>
-      <img src="/billeder/2guide.webp" alt="" />
+      <img src="/billeder/2guide.webp" alt="" loading="lazy" />
       <div class="dots">
         <a href="#slide1" class="dot"></a>
         <a href="#slide2" class="dot active"></a>
@@ -38,7 +38,7 @@
         <h3>3. Nyd dit nye tøj</h3>
         <p>Nyd dit nye tøj i en hel måned, inden vi mødes igen til en kop kaffe og endnu et byt.</p>
       </div>
-      <img src="/billeder/3guide.webp" alt="" />
+      <img src="/billeder/3guide.webp" alt="" loading="lazy" />
       <div class="dots">
         <a href="#slide1" class="dot"></a>
         <a href="#slide2" class="dot"></a>
