--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@
       </div>
       <div class="logo-wrapper">
         <a href="/">
-          <img src="/billeder/headerlogo.webp" alt="Another logo" class="logo-img" />
+          <img src="/billeder/headerlogo.webp" alt="Another logo" class="logo-img" loading="lazy" />
         </a>
       </div>
 
