--- a/src/components/Lokalomraade.astro
+++ b/src/components/Lokalomraade.astro
@@ -4,7 +4,7 @@
   <a href="/medlem" class="button">Bliv ambassadør</a>
 </div>
 
-<img src="/billeder/dashed-line.webp" alt="" />
+<img src="/billeder/dashed-line.webp" alt="" loading="lazy" />
 
 <style>
   body {
