--- a/src/components/MedlemBanner.astro
+++ b/src/components/MedlemBanner.astro
@@ -5,7 +5,7 @@
 <section class="medlem-banner">
   <div class="medlem-banner__grid">
     <div class="medlem-banner__image">
-      <img src="/public/billeder/medlemsbanner.webp" alt="Medlemskab billede 1" />
+      <img src="/public/billeder/medlemsbanner.webp" alt="Medlemskab billede 1" loading="lazy" />
     </div>
   </div>
   <div class="medlem-banner__intro">
