--- a/src/components/Plakat.astro
+++ b/src/components/Plakat.astro
@@ -1,10 +1,10 @@
 <section>
-  <img class="line" src="/billeder/plakater/line.png" alt="" />
+  <img class="line" src="/billeder/plakater/line.png" alt="" loading="lazy" />
   <div class="posters">
-    <a href="/Nørrebro"><img src="/billeder/plakater/plakat1.webp" alt="Nørrebroplakat" /></a>
-    <a href="/Ribe"><img src="/billeder/plakater/plakat2.webp" alt="Ribeplakat" /></a>
-    <a href="/Fredericia" class="hide"><img src="/billeder/plakater/plakat3.webp" alt="Fredericiaplakat" /></a>
-    <a href="/Roskilde" class="hide"><img src="/billeder/plakater/plakat4.webp" alt="Roskildeplakat" /></a>
+    <a href="/Nørrebro"><img src="/billeder/plakater/plakat1.webp" alt="Nørrebroplakat" loading="lazy" /></a>
+    <a href="/Ribe"><img src="/billeder/plakater/plakat2.webp" alt="Ribeplakat" loading="lazy" /></a>
+    <a href="/Fredericia" class="hide"><img src="/billeder/plakater/plakat3.webp" alt="Fredericiaplakat" loading="lazy" /></a>
+    <a href="/Roskilde" class="hide"><img src="/billeder/plakater/plakat4.webp" alt="Roskildeplakat" loading="lazy" /></a>
   </div>
 </section>
 
