--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,7 +3,7 @@
 ---
 
 <video autoplay muted loop playsinline class="forside-video">
-  <source src="/videoer/Herocomputer.mp4" type="video/mp4" />
+  <source src="/videoer/Herocomputer.mp4" type="video/mp4" loading="lazy" />
 </video>
 
 <style>
