--- a/src/components/AmbassadorSection.astro
+++ b/src/components/AmbassadorSection.astro
@@ -25,7 +25,7 @@
       <!-- Product card -->
       <div class="pricing-card">
         <div class="pricing-card__header">
-          <img src="/billeder/ambassador.webp" alt="Ambassadør ikon" />
+          <img src="/billeder/ambassador.webp" alt="Ambassadør ikon" loading="lazy"/>
           <div>
             <h4>Ambassadør</h4>
             <span>0 kr/md</span>
