--- a/src/components/BegivenhedsMap.astro
+++ b/src/components/BegivenhedsMap.astro
@@ -12,7 +12,7 @@ import PinIcon from "/public/billeder/pin.png";
 
       <a href="/Roskilde" class="marker" style="top: 60%; left: 77.5%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Roskilde.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Roskilde.png" alt="Hover Marker" class="marker-hover" loading="lazy"/>
       </a>
       <!-- <a href="/" class="marker" style="top: 60%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
@@ -20,23 +20,23 @@ import PinIcon from "/public/billeder/pin.png";
       </a> -->
       <a href="/Ringkøbing" class="marker" style="top: 46%; left: 18%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Ringkobing.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Ringkobing.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
       </a>
       <a href="/Ribe" class="marker" style="top: 69%; left: 25%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Ribe.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Ribe.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
       </a>
       <a href="/Nørrebro" class="marker" style="top: 59%; left: 83%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Norrebro.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Norrebro.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
       </a>
       <a href="Lyngby/" class="marker" style="top: 57%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Lyngby.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Lyngby.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
       </a>
       <a href="/Fredericia" class="marker" style="top: 62%; left: 40%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Fredericia.png" alt="Hover Marker" class="marker-hover" />
+        <img src="/billeder/PinHover-Fredericia.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
       </a>
     </div>
 
