--- a/src/components/Medlem_popup.astro
+++ b/src/components/Medlem_popup.astro
@@ -2,9 +2,9 @@
   <div class="pop-up__box">
     <button class="close">&times;</button>
     <div class="images">
-      <img class="hide" src="/public/billeder/influencer.png" alt="Preview 1" />
-      <img  src="/public/billeder/pizza.png" alt="Preview 2" />
-      <img class="hide" src="/public/billeder/clothingrack.png" alt="Preview 3" />
+      <img class="hide" src="/public/billeder/influencer.png" alt="Preview 1" loading="lazy" />
+      <img  src="/public/billeder/pizza.png" alt="Preview 2" loading="lazy" />
+      <img class="hide" src="/public/billeder/clothingrack.png" alt="Preview 3" loading="lazy" />
     </div>
     <h2>Tilmeld dig her og kom igang med at bytte</h2>
     <form class="form">
