Aendret hero billede

--- a/src/components/Medlem_popup.astro
+++ b/src/components/Medlem_popup.astro
@@ -3,7 +3,7 @@
     <button class="close">&times;</button>
     <div class="images">
       <img class="hide" src="/billeder/popup/stylist2.webp" alt="Preview 1" loading="lazy" />
-      <img  src="/billeder/popup/hygge2.webp"" alt="Preview 2" loading="lazy" />
+      <img  src="/billeder/popup/hygge2.webp" alt="Preview 2" loading="lazy" />
       <img class="hide" src="/billeder/popup/clothing2.webp" alt="Preview 3" loading="lazy" />
     </div>
     <h2>Tilmeld dig her og kom igang med at bytte</h2>
