all fonts loaded og font sizes fra designsystem på

--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -35,7 +35,7 @@ const events = await res.json();
             <div class="event-content">
               <div class="event-date">
                 <div class="event-date-inner">
-                  <h3>{ev.dato}</h3>
+                  <p><strong>{ev.dato}</strong></p>
                   <p>{ev.tid1}</p>
                 </div>
               </div>
