--- a/src/ccs/global.css
+++ b/src/ccs/global.css
@@ -1,18 +1,44 @@
 @import url("https://fonts.cdnfonts.com/css/oregon-ldo");
-@font-face {
-  font-family: "optima";
-  src: url("/public/fonts/optima") format("woff2");
 
-  font-weight: normal;
-  font-style: normal;
-}
 body {
   font-family: "IBM Plex Sans", sans-serif;
   background-color: #fef9e9;
 }
 h1 {
   font-family: "Oregon LDO DemiBold", sans-serif;
+  font-size: 96px;
 }
 h2 {
   font-family: "Oregon LDO", sans-serif;
+  font-size: 59px;
 }
+
+h3 {
+  font-family: "Oregon LDO", sans-serif;
+  font-size: 37px;
+}
+p{
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 23px;
+}
+
+
+
+@media (min-width: 768px) {
+
+  h1 {
+  font-size: 110px;
+}
+h2 {
+  font-size: 68px;
+}
+
+h3 {
+  font-size: 42px;
+}
+p{
+
+  font-size: 26px;
+}
+
+ }
