--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -12,25 +12,25 @@
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Ringkøbing-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
+    <img src="/billeder/Ringkøbing-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
     <h3>Ringkøbing</h3>
     <button> <a href="/Ringkøbing">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Roskilde-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
+    <img src="/billeder/Roskilde-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
     <h3>Roskilde</h3>
     <button> <a href="/Roskilde">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Lyngby-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
+    <img src="/billeder/Lyngby-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
     <h3>Lyngby</h3>
     <button> <a href="/Lyngby">Se events og tilmeld dig</a></button>
   </div>
 
   <div class="card">
-    <img src="/public/billeder/Nørrebro-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
+    <img src="/billeder/Nørrebro-Lineart.webp" alt="Stregtegning af by" loading="lazy" />
     <h3>Nørrebro</h3>
     <button> <a href="/Nørrebro">Se events og tilmeld dig</a></button>
   </div>
