--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -22,11 +22,13 @@ const faqs = [
   },
   {
     question: "Må jeg tage en ven med til event selvom han ikke er medlem?",
-    answer: "Ja, man er altid velkommen til at medbringe en ven eller familiemedlem til vores events.",
+    answer:
+      "Ja, man er altid velkommen til at medbringe en ven eller familiemedlem til vores events.",
   },
   {
     question: "Skal jeg tilmelde mig events på forhånd?",
-    answer: "Det er ikke et krav, men vi sætter stor pris på, at du tilmelder dig – så har vi en idé om, hvor mange der kommer, og kan planlægge lidt bedre.",
+    answer:
+      "Det er ikke et krav, men vi sætter stor pris på, at du tilmelder dig – så har vi en idé om, hvor mange der kommer, og kan planlægge lidt bedre.",
   },
 
   {
@@ -36,7 +38,8 @@ const faqs = [
   },
   {
     question: "Skal jeg have erfaring for at blive ambassadør?",
-    answer: "Nej, så længe du har et drive og er klar på at gå all ind i vores fælleskab, så behøver du ingen tidligere erfaring.",
+    answer:
+      "Nej, så længe du har et drive og er klar på at gå all ind i vores fælleskab, så behøver du ingen tidligere erfaring.",
   },
 ];
 ---
@@ -88,6 +91,8 @@ const faqs = [
     margin-bottom: 0.5rem;
     line-height: 25px;
     color: #333;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 
   .faq-item.active .faq-answer {
@@ -98,6 +103,7 @@ const faqs = [
     font-size: 2.5rem;
     transform: rotate(0deg);
     transition: transform 0.3s ease;
+    margin-right: 1rem;
   }
 
   .faq-item.active .plus {
@@ -108,14 +114,14 @@ const faqs = [
       padding: 4rem;
     }
     .faq-question {
-      font-size: 1rem;
+      font-size: 1.2rem;
     }
     .faq-item {
       margin-bottom: 1.1rem;
     }
 
     h2 {
-      font-size: 3.8rem;
+      font-size: 4.5rem;
       margin-bottom: 3.5rem;
     }
   }
