--- a/src/components/Kort.astro
+++ b/src/components/Kort.astro
@@ -8,11 +8,21 @@ import PinIcon from "/public/billeder/pin.png";
 
   <div class="content">
     <div class="map-wrapper">
-      <img src={MapImage.src} alt="Kort over Danmark med eventsteder" class="map" loading="lazy" />
+      <img
+        src={MapImage.src}
+        alt="Kort over Danmark med eventsteder"
+        class="map"
+        loading="lazy"
+      />
 
       <a href="/Roskilde" class="marker" style="top: 60%; left: 77.5%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Roskilde.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Roskilde.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
       <!-- <a href="/" class="marker" style="top: 60%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
@@ -20,30 +30,61 @@ import PinIcon from "/public/billeder/pin.png";
       </a> -->
       <a href="/Ringkøbing" class="marker" style="top: 46%; left: 18%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Ringkobing.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Ringkobing.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
       <a href="/Ribe" class="marker" style="top: 69%; left: 25%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Ribe.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Ribe.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
       <a href="/Nørrebro" class="marker" style="top: 59%; left: 83%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Norrebro.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Norrebro.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
       <a href="Lyngby/" class="marker" style="top: 57%; left: 85%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Lyngby.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Lyngby.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
       <a href="/Fredericia" class="marker" style="top: 62%; left: 40%;">
         <img src={PinIcon.src} alt="Marker" class="marker-default" />
-        <img src="/billeder/PinHover-Fredericia.png" alt="Hover Marker" class="marker-hover" loading="lazy" />
+        <img
+          src="/billeder/PinHover-Fredericia.png"
+          alt="Hover Marker"
+          class="marker-hover"
+          loading="lazy"
+        />
       </a>
     </div>
 
     <div class="text">
       <h2 class="desktop-heading">Find dit tøjfællesskab</h2>
-      <p>Another Closet er mere end mode – det er et fællesskab. Vi samler dig og andre til swap events, workshops og talks om bæredygtig stil. Kom og vær med til at dele, lære og inspirere!</p>
-      <a href="/begivenheder" class="event-link"> Læs mere om vores events her </a>
+      <p>
+        Another Closet er mere end mode – det er et fællesskab. Vi samler dig og
+        andre til swap events, workshops og talks om bæredygtig stil. Kom og vær
+        med til at dele, lære og inspirere!
+      </p>
+      <a href="/begivenheder" class="event-link">
+        Læs mere om vores events her
+      </a>
     </div>
   </div>
 </section>
@@ -154,7 +195,7 @@ import PinIcon from "/public/billeder/pin.png";
 
     .text {
       text-align: left;
-      margin-top: 0px;
+      margin-bottom: 5rem;
       font-size: clamp(0.8rem, 1.5vw, 2rem);
       margin-right: 2rem;
     }
@@ -174,6 +215,7 @@ import PinIcon from "/public/billeder/pin.png";
 
     h2 {
       text-align: left;
+      font-size: 2.2rem;
     }
     .marker {
       width: 2vw;
